--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html lang="ko">
 <head>
 	<title>회원가입 모음</title>
@@ -22,18 +22,18 @@
 		</tr>
 		
 		<tr><td>2</td>
-			<td>네이버</td>
-			<td><a href="join/naver.html" target="_blank" />회원가입 바로가기</a></td>
+			<td>마켓컬리</td>
+			<td><a href="join/kurly.html" target="_blank" />회원가입 바로가기</a></td>
 		</tr>
 		
 		<tr><td>3</td>
-			<td>네이버</td>
-			<td><a href="join/naver.html" target="_blank" />회원가입 바로가기</a></td>
+			<td>알바몬</td>
+			<td><a href="join/alba.html" target="_blank" />회원가입 바로가기</a></td>
 		</tr>
 		
 		<tr><td>4</td>
-			<td>네이버</td>
-			<td><a href="join/naver.html" target="_blank" />회원가입 바로가기</a></td>
+			<td>쿠팡</td>
+			<td><a href="join/coupang.html" target="_blank" />회원가입 바로가기</a></td>
 		</tr>
 		
 		<tr><td>5</td>
